--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dnd-html5-backend": "^7.4.4",
     "react-odometerjs": "^2.1.1",
     "react-sizeme": "^2.5.2",
+    "rxjs": "^6.5.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
